packages/kit/test/apps/basics/src/routes/load/invalidation/depends-goto/+page.server.js
/** @type {import('./$types').PageServerLoad} */
export function load({ depends }) {
	depends('invalidate-depends-goto:server');
	return {
		server: new Date().getTime()
	};
}
